fix: align left on ad

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -81,4 +81,5 @@
   gap: 2rem;
   height: 65%;
   width: 90%;
+  text-align: left;
 }
