--- a/src/styles/readView.css
+++ b/src/styles/readView.css
@@ -12,6 +12,7 @@
   z-index: 1;
   position: relative;
   cursor: pointer;
+  text-align: left;
 }
 
 .Ad div,
